<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donutCreator">

    <TextView
        android:id="@+id/titleDonutCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDonutCreator"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/donutType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/donutType"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDonutCreator"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/txtDonutTypeGroup"
        android:layout_width="307dp"
        android:layout_height="28dp"
        android:layout_marginTop="5dp"
        android:entries="@array/txtDonutTypeGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutType"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtGlazeOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtGlazeOption"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDonutTypeGroup"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="318dp"
        android:layout_height="71dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGlazeOption">

        <RadioButton
            android:id="@+id/radGlaze"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/radGlaze" />

        <RadioButton
            android:id="@+id/radNoGlaze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radNoGlaze" />
    </RadioGroup>

    <Spinner
        android:id="@+id/txtIcingGroup"
        android:layout_width="307dp"
        android:layout_height="28dp"
        android:layout_marginTop="5dp"
        android:entries="@array/txtIcingGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIcingOption"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtIcingOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtIcingOption"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="277dp"
        android:layout_height="147dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtToppings"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:id="@+id/checkSprinkles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkSprinkles" />

        <CheckBox
            android:id="@+id/checkNuts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkNuts" />

        <CheckBox
            android:id="@+id/checkCandy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkCandy" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtToppings"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIcingGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btnConfirm"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtPrice"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>